--- a/index.html
+++ b/index.html
@@ -1,11 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus iusto aut beatae omnis obcaecati vel, dignissimos in perferendis a ut! Quas corporis quos culpa sunt blanditiis temporibus deleniti velit explicabo.
-</body>
-</html>
+
+    <!------ Include the above in your HEAD tag ---------->
+
+    <!DOCTYPE html>
+    <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Snow Finder</title>
+        <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    </head>
+    <body>
+
+        <!--start of header-->
+        <div class="container-fluid p-0">
+            <div class="wrapper">
+                <header>
+                    <nav>
+                    <div class="menu-icon">
+                        <i class="fa fa-bars fa-2x"></i>
+                    </div>
+                    <div class="logo">
+                        snowfinder
+                    </div>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+            <div class="opacity">
+                a
+            </div>
+                    </nav>
+                </header>
+
+        </div>
+        </div>
+            <!-- end of header -->
+
+            <!--start of content-->
+        <div class="container-fluid parallax">
+            <!-- <div class="content row">
+                <div class="card col-6" style="width: 18rem;">
+                    <img class="card-img-top" src="images/nyc.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div> -->
+            </div>
+            <!-- <div class="content row">
+                <div class="card col-6" style="width: 18rem;">
+                    <img class="card-img-top" src="images/nyc.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="content row">
+                <div class="card col-6" style="width: 18rem;">
+                    <img class="card-img-top" src="images/nyc.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="content row">
+                <div class="card col-6" style="width: 18rem;">
+                    <img class="card-img-top" src="images/nyc.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+
+        <script src="blueTeam.js"></script>
+    </body>
+    </html>
