--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="css/navbar.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link rel="stylesheet" href="css/map.css">
         
     
     </head>
@@ -50,7 +52,7 @@
                     <img src="images/test.png" alt="">
                 </div>
                 <div class="col-10 content" id="globe">
-                    <div class="map mapCircle" style="position: relative; background-color: transparent; overflow: hidden;">
+                    <div id="map" class="map mapCircle" style="position: relative; background-color: transparent; overflow: hidden;">
                         <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%; z-index: 0;">
                             <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%;">
                                 <img src="images/gradient.jpeg" alt="">
@@ -79,5 +81,8 @@
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
+        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
+        <script src="js/claude.js"></script>
     </body>
     </html>
