New Index Fixes

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -8,6 +8,8 @@
         <title>Snow Finder</title>
         <link rel="stylesheet" href="../css/global.css">
         <link rel="stylesheet" href="../css/navbar.css">
+        <link rel="icon" href="../images/snowflake.png">
+        <link href="https://fonts.googleapis.com/css2?family=Snowburst+One&display=swap" rel="stylesheet">
 
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,11 +27,11 @@
                     <div class="menu-icon">
                         <i class="fa fa-bars fa-2x"></i>
                     </div>
-                    <div class="logo">
+                    <div class="logo snowText">
                         snowfinder
                     </div>
                     <div class="menu">
-                        <ul>
+                        <ul class="snowText">
                             <li><a href="../index.html">home</a></li>
                             <li><a href="aboutus.html">about us</a></li>
                             
