--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Snow Finder</title>
+        <title>Slope Search</title>
         <link rel="stylesheet" href="../css/global.css">
         <link rel="stylesheet" href="../css/navbar.css">
         <link rel="icon" href="../images/snowflake.png">
@@ -28,7 +28,7 @@
                         <i class="fa fa-bars fa-2x"></i>
                     </div>
                     <div class="logo snowText">
-                        snowfinder
+                        slope search
                     </div>
                     <div class="menu">
                         <ul class="snowText">
