--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Snow Finder</title>
+        <title>Slope Search</title>
         <!-- <link rel="stylesheet" href=../flexbox.css> -->
         <link rel="stylesheet" href="css/global.css">
         <link rel="stylesheet" href="css/navbar.css">
@@ -30,7 +30,7 @@
                         <i class="fa fa-bars fa-2x"></i>
                     </div>
                     <div class="logo snowText">
-                        snowfinder
+                        slope search
                     </div>
                     <!-- <div class="logo snowText">
                         ski finder
@@ -69,7 +69,7 @@
 
             <div class="row searchBarContainer">
                 <form class="" id="searchBar">
-                    <div class="form-group text2 searchBarContainer">
+                    <div class="form-group snowText searchBarContainer">
                         <!-- <label for="exampleInputEmail1">Enter Your City</label> -->
                         <input type="text" class="form-control" id="cityInput" placeholder="City Name">
                         <button id="submitCity" type="submit" class="btn btn-primary">Submit</button>
@@ -79,7 +79,7 @@
                     &nbsp;&nbsp; or &nbsp;&nbsp;
                 </div>
                 <form class="" id="searchBar">
-                    <div class="form-group text2 searchBarContainer">
+                    <div class="form-group snowText searchBarContainer">
                         <!-- <label for="exampleInputEmail1">Enter Your City</label> -->
                         <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Current Location"> -->
                         <button id="locationButton" type="submit" class="btn btn-primary">Use Current Location</button>
