Index.HTML Fonts Updated

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     &nbsp;&nbsp; or &nbsp;&nbsp;
                 </div>
                 <form class="" id="searchBar">
-                    <div class="form-group text2 searchBarContainer">
+                    <div class="form-group snowText searchBarContainer">
                         <!-- <label for="exampleInputEmail1">Enter Your City</label> -->
                         <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Current Location"> -->
                         <button id="locationButton" type="submit" class="btn btn-primary">Use Current Location</button>
