--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -74,18 +74,18 @@
             </div>
             <div class="row">
                 <div class="text1 col">
-                    <ul>
-                        <li>Enter</li>
-                        <li>Text</li>
-                        <li>Here</li>
-                        <li>When</li>
-                        <li>Finished</li>
+                    <ul class=fa-ul>
+                        <li class="fa-li"><i class="fab fa-html5 fa-2x"></i>HTML5</li>
+                        <li class="fa-li"><i class="fab fa-css3 fa-2x"></i>CSS</li>
+                        <li class="fa-li"><i class="fab fa-js fa-2x"></i>JavaScript</li>
+                        <li class="fa-li"><i class="fab fa-bootstrap fa-2x"></i>Bootstrap</li>
+                        <!-- <li>Finished</li> -->
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-
+        <script src="https://kit.fontawesome.com/c56a2e2a91.js" crossorigin="anonymous"></script>
         <script src="blueTeam.js"></script>
 
         <!-- <script>
