--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="row">
                         <div class="snowText techUsed col">
-                            <h3><img src="../images/snowflake.png" height="20" alt="">OTHER API</h3>
+                            <h3><img src="../images/snowflake.png" height="20" alt="">OPENWEATHERMAP API</h3>
                         </div>
                     </div>
                     <div class="row">
