--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             <!-- end of header -->
 
             <!--start of map-->
-            <div class="row rowHeight z2" id="mapContainer">
+            <div class="row rowHeight" id="mapContainer">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 col-xl-10 content" id="globe">
                     <div class="map mapCircle" style="position: relative; background-color: transparent; overflow: hidden;">
-                        <div style="position: absolute; left: 0px; top: 0px; bottom: 5px; overflow: hidden; width: 100%; height: 100%; z-index: 0;">
+                        <div style="position: absolute; left: 0px; top: 0px; bottom: 5px; overflow: hidden; width: 100%; height: 100%;">
                             <div class="activity_rounded" id="map" style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%;">
                             </div>
                         </div>
