Updated About Us Page and ReadMe

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -42,19 +42,20 @@
                             <div class="card content col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="width: 18rem; background-color: #172C5B;">
                                 <img class="card-img-top" src="../images/claude.jpeg" alt="Card image cap">
                                 <div class="card-body cardBackground">
-                                    <p class="card-text text1">Claude Major <br> Project Manager</p>
+                                    <p class="card-text snowText">Claude Major <br> Project Manager <br><br><a href="https://www.linkedin.com/in/claumaj/"><i class="fab fa-linkedin"></i>&nbsp;LinkedIn</a><br><a href="https://github.com/ClauMaj"><i class="fab fa-github"></i>&nbsp; GitHub</a></p>
                                 </div>
                             </div>
                             <div class="card content col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="width: 18rem; background-color: #172C5B;">
                                 <img class="card-img-top" src="../images/matt.jpeg" alt="Card image cap">
                                 <div class="card-body cardBackground">
-                                    <p class="card-text text1">Matt Phillips <br> API Data Mining Specialist</p>
+                                    <p class="card-text snowText">Matt Phillips <br> API Data Mining Specialist <br><br><a href="https://github.com/jmphil"><i class="fab fa-linkedin"></i>&nbsp;LinkedIn</a><br><a href="https://github.com/jmphil"><i class="fab fa-github"></i>&nbsp; GitHub</a></p>
+                                    
                                 </div>
                             </div>
                             <div class="card content col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="width: 18rem; background-color: #172C5B;">
                                 <img class="card-img-top" src="../images/jacob2.jpeg" alt="Card image cap">
                                 <div class="card-body cardBackground">
-                                    <p class="card-text text1">Jacob Deel <br> Website Design</p>
+                                    <p class="card-text snowText">Jacob Deel <br> Website Design <br><br><a href="https://www.linkedin.com/in/jacob-deel-093b401b9/"><i class="fab fa-linkedin"></i>&nbsp; LinkedIn</a><br><a href="https://github.com/jacoblakedeel"><i class="fab fa-github"></i>&nbsp; GitHub</a></p>
                                 </div>
                             </div>
                     </div>
